<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/app_name">

        <SwitchPreferenceCompat
            android:id="@+id/killmicroswitch"
            app:key="sync"
            app:title="@string/kill_micro" />

        <SwitchPreferenceCompat
            android:id="@+id/killcameraswitch"
            app:dependency="sync"
            app:key="attachment"
            app:title="@string/kill_kamera" />
        <SwitchPreferenceCompat
            android:id="@+id/startonbootswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dependency="sync"
            app:key="attachment"
            app:title="@string/enableonboot" />

    </PreferenceCategory>

</PreferenceScreen>